RESOLVED FIXED136469
bmalloc crashes on the EWS bots (due to bad large object allocation)
https://bugs.webkit.org/show_bug.cgi?id=136469
Summary bmalloc crashes on the EWS bots (due to bad large object allocation)
Geoffrey Garen
Reported 2014-09-02 16:04:57 PDT
bmalloc crashes on the EWS bots (due to bad large object allocation)
Attachments
Patch (11.80 KB, patch)
2014-09-02 16:12 PDT, Geoffrey Garen
kling: review+
Geoffrey Garen
Comment 1 2014-09-02 16:12:37 PDT
Andreas Kling
Comment 2 2014-09-03 10:34:47 PDT
Comment on attachment 237527 [details] Patch r=me. Great job tracking this down. I would have uploaded this patch with an extra hunk to enable bmalloc for EWS ;)
Geoffrey Garen
Comment 3 2014-09-03 14:00:45 PDT
Note You need to log in before you can comment on or make changes to this bug.